# seismosis

./: .env.example  .gitignore  LICENSE  docker-compose.yml
config/grafana/dashboards/: earthquake_overview.json
config/grafana/provisioning/alerting/: alerting.yml
config/grafana/provisioning/dashboards/: dashboards.yml
config/grafana/provisioning/datasources/: datasources.yml
config/postgres/: pg_hba.conf  postgresql.conf  queries.yaml
config/postgres/init/: 01_extensions.sql  02_schema.sql  03_enrichment_columns.sql
config/prometheus/: prometheus.yml
config/prometheus/rules/: earthquake_alerts.yml
config/redis/: redis.conf
config/redpanda/: console.yaml
docs/: configuration.md  schema-changelog.md
docs/adr/: ADR-0001-websocket-kafka-offset-management.md  ADR-0002-frontend-maplibre-over-mapbox.md
docs/sessions/: 2026-04-12-phase2-analysis-service.md  2026-04-13-phase2-frontend-websocket-fixes.md  phase1-completion.md
frontend/: .gitignore  Dockerfile  next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/deprem/[id]/: page.tsx
frontend/src/components/: Dashboard.tsx  EarthquakeList.tsx  EpicenterMap.tsx  Header.tsx  MagnitudeBadge.tsx  MapInner.tsx  RegionalStats.tsx
frontend/src/components/tabs/: CompareTab.tsx  HistoryTab.tsx  RealtimeTab.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/lib/: api.ts  magnitude.ts
frontend/src/types/: index.ts
services/: Cargo.toml
services/analysis/: Dockerfile  pyproject.toml
services/analysis/src/analysis/: aftershock.py  avro_codec.py  cache.py  config.py  consumer.py  db.py  magnitude.py  main.py  metrics.py  models.py  producer.py  risk.py  schema.py
services/analysis/tests/: conftest.py  test_aftershock.py  test_integration.py  test_magnitude.py  test_models.py
services/api/: Cargo.toml  Dockerfile
services/api/src/: cache.rs  config.rs  db.rs  error.rs  main.rs  metrics.rs  model.rs  openapi.rs
services/api/src/routes/: events.rs  health.rs  metrics_handler.rs  mod.rs  stats.rs
services/ingestion/: Cargo.toml  Dockerfile
services/ingestion/src/: avro.rs  config.rs  dead_letter.rs  dedup.rs  error.rs  integration_tests.rs  main.rs  metrics.rs  producer.rs  registry.rs  schema.rs
services/ingestion/src/sources/: afad.rs  emsc.rs  mod.rs  usgs.rs
services/storage/: Cargo.toml  Dockerfile
services/storage/src/: avro.rs  config.rs  db.rs  dead_letter.rs  error.rs  main.rs  metrics.rs  model.rs  registry.rs
services/websocket/: Cargo.toml  Dockerfile
services/websocket/src/: avro.rs  config.rs  error.rs  event.rs  filter.rs  handler.rs  hub.rs  main.rs  metrics.rs
