[package]
name = "seismosis-websocket"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Seismosis WebSocket push service — real-time earthquake event delivery to connected clients"

[[bin]]
name = "seismosis-websocket"
path = "src/main.rs"

[dependencies]
# ── Async runtime ────────────────────────────────────────────
tokio = { workspace = true }

# ── WebSocket ────────────────────────────────────────────────
# tokio-tungstenite is only used by this service; version pinned here.
tokio-tungstenite = "0.24"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }

# ── Kafka / Redpanda consumer ─────────────────────────────────
rdkafka = { workspace = true }
futures = { version = "0.3", default-features = false, features = ["alloc"] }

# ── Avro serialisation ───────────────────────────────────────
apache-avro = { workspace = true }

# ── HTTP client (Schema Registry) ───────────────────────────
reqwest = { workspace = true }

# ── Error handling ───────────────────────────────────────────
thiserror = { workspace = true }
anyhow = { workspace = true }

# ── Serialisation ────────────────────────────────────────────
serde = { workspace = true }
serde_json = { workspace = true }

# ── Structured logging ───────────────────────────────────────
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# ── Prometheus metrics ───────────────────────────────────────
prometheus = { workspace = true }

# ── Metrics HTTP server ──────────────────────────────────────
axum = { workspace = true }

# ── IDs ──────────────────────────────────────────────────────
uuid = { workspace = true }

# ── URL percent-decoding (query parameter values) ────────────
percent-encoding = "2"
